Data insert done

--- a/recipes/halo-halo.html
+++ b/recipes/halo-halo.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,19 +9,31 @@
     <h1>Halo-Halo</h1>
     <img src="pictures/Halohalo.jpg" alt="halo-halo" height="310" weight="310">
     <p>Halo-Halo is one of the favorite dessert and comfort food of Mamamayang Pilipino when weather is so hot.</p>
+
+    <ul>
+        <li>1/4 cup sweetened red beans</li>
+        <li>1/4 cup sweetened white beans</li>
+        <li>4 cups shaved ice, from about 6 cups of ice cubes</li>
+        <li>1 large banana, thinly sliced</li>
+        <li>1/4 cup, drained jackfruit canned, sliced</li>
+        <li>1/4 cup macapuno strips, drained</li>
+        <li>1/4 cup nata de coco, drained</li>
+        <li>1/4 cup red palm seeds (Kaong), drained</li>
+        <li>1/4 cup green palm seeds (Kaong), drained</li>
+        <li>1 cup evaporated milk, divided</li>
+        <li>1/2 cup cap'n crunch with crunch berries cereal</li>
+        <li>2 scoops ube ice cream, store-bought or homemade</li>
+    </ul>
+
+    <ol>
+        <li>Gather the ingredients and two tall parfait glasses.</li>
+        <li>Place half the sweetened red and white beans at the bottom of each glass.</li>
+        <li>Process about half the ice cubes in an ice shaver, blender, or food processor until it looks like snow. Then scoop about a half cup of the shaved ice on top of the beans.</li>
+        <li>Add some banana and jackfruit slices, and top with another half cup of shaved ice. Add the macapuno strips and nata de coco.</li>
+        <li>Process the other half of the ice cubes and add another half cup of shaved ice on top.</li>
+        <li>Add the red and green palm seeds. Then add the final half cup of shaved ice to each glass, doming it slightly on top.</li>
+        <li>Pour 1/2 cup evaporated milk on top of each parfait and top with a scoop of ube ice cream.</li>
+        <li>Top with Cap'n Crunch cereal and enjoy immediately! Don't forget to halo-halo it with a long spoon!</li>
+    </ol>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Halo-Halo</h1>
-    <img src="pictures/Halohalo.jpg" alt="halo-halo" height="310" weight="310">
-    <p>Halo-Halo is one of the favorite dessert and comfort food of Mamamayang Pilipino when weather is so hot.</p>
-</body>
->>>>>>> 73576dd12957bdb6ee518872f2fbf61140fb3652
 </html>
