--- a/recipes/presto-peanut.html
+++ b/recipes/presto-peanut.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,19 +9,37 @@
     <h1>Presto Peanut</h1>
     <img src="pictures/presto.jpg" alt="presto-peanut" height="310" weight="310">
     <p>Presto Peanut is one of the go-to snacks whenever and wherever you are.</p>
+
+    <p>Biscuit Base</p>    
+    <ul>
+        <li>wheat flour</li>
+        <li>vegetable fat (palm, coconut)</li>
+        <li>sugar</li>
+        <li>cornstarch</li>
+        <li>glucose</li>
+        <li>iodized salt</li>
+        <li>artificial flavor</li>
+        <p>Raising Agents</p>
+        <li>sodium bicarbonate</li>
+        <li>ammonium bicarbonate</li>
+        <li>sodium acid pyrophosphate</li>
+    </ul>
+    <p>Cream Filling</p>
+    <ul>
+        <li>peanut paste</li>
+        <li>sugar</li>
+        <li>whey</li>
+        <p>emulsifiers</p>
+        <li>triglycerides</li>
+        <li>soya lecithin</li>
+        <li>cornstarch</li>
+        <li>iodized salt</li>
+        <p>antioxidants</p>
+        <li>BHA</li>
+        <li>BHT</li>
+        <li>propyl gallate</li>
+    </ul>
+
+    <p>How to prepare is private.</p>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Presto Peanut</h1>
-    <img src="pictures/presto.jpg" alt="presto-peanut" height="310" weight="310">
-    <p>Presto Peanut is one of the go-to snacks whenever and wherever you are.</p>
-</body>
->>>>>>> 73576dd12957bdb6ee518872f2fbf61140fb3652
 </html>
