--- a/recipes/breadpan.html
+++ b/recipes/breadpan.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,19 +9,25 @@
     <h1>Bread Pan</h1>
     <img src="pictures/Breadpan.jpg" alt="breadpan" height="310" weight="310">
     <p>Mamamayang Pilipino snacks</p>
+
+    <ul>
+        <li>Wheat</li>
+        <li>Vegetable Oil(Coconut oil and Palm Olein)</li>
+        <li>Cheese Powder</li>
+        <li>Sugar</li>
+        <li>Corn Starch</li>
+        <li>Milk Powder</li>
+        <li>Salt</li>
+        <li>Milk Casein</li>
+        <li>Onion Powder</li>
+        <li>Dehydrated Chives</li>
+        <li>Sodium Bicarbonate</li>
+        <li>FD & C Yellow No.5</li>
+        <li>Lactic Acid</li>
+        <li>Artificial Flavor</li>
+        <li>Yeast Extract</li>
+    </ul>
+
+    <p>How to prepare is private.</p>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Bread Pan</h1>
-    <img src="pictures/Breadpan.jpg" alt="breadpan" height="310" weight="310">
-    <p>Mamamayang Pilipino snacks</p>
-</body>
->>>>>>> 73576dd12957bdb6ee518872f2fbf61140fb3652
 </html>
