adobo.html edited

--- a/recipes/adobo.html
+++ b/recipes/adobo.html
@@ -6,12 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body style="border: 1px solid; border-radius: 10px;">
     <h1>Adobo</h1>
-    <img src="pictures/Adobo.jpg" alt="adobo" height="310" weight="310">
-    <p>Adobo is the pambansang ulam in the Philippines. Adobo is favorite food of Mamamayang Pilipino.</p>
+    <img src="pictures/Adobo.jpg" alt="adobo" height="400" weight="400" style="padding: 8px; border: 1px solid; margin: 20px 355px;">
+    <p style="margin: 20px 360px;">Adobo is the pambansang ulam in the Philippines. Adobo is favorite food of Mamamayang Pilipino.</p>
 
-    <ul>
+    <ul style="margin: 10px 400px;">
         <li>2 lbs pork belly</li>
         <li>2 tablespoons garlic</li>
         <li>5 dried bay leaves</li>
@@ -22,7 +22,7 @@
         <li>salt to taste</li>
     </ul>
 
-    <ol>
+    <ol style="margin: 20px 350px;">
         <li>Combine the pork belly, soy sauce, and garlic then marinade for at least 1 hour</li>
         <li>Heat the pot and put-in the marinated pork belly then cook for a few minutes</li>
         <li>Pour remaining marinade including garlic.</li>
