--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/adobo.html">Adobo</a><br>
-    <a href="recipes/angels-burger.html">Angels Burger</a><br>
-    <a href="recipes/breadpan.html">Bread Pan</a><br>
-    <a href="recipes/halo-halo.html">Halo-halo</a><br>
-    <a href="recipes/presto-peanut.html">Presto Peanut</a>
+    <div id="recipes">
+        <a href="recipes/adobo.html">Adobo</a><br>
+        <a href="recipes/angels-burger.html">Angels Burger</a><br>
+        <a href="recipes/breadpan.html">Bread Pan</a><br>
+        <a href="recipes/halo-halo.html">Halo-halo</a><br>
+        <a href="recipes/presto-peanut.html">Presto Peanut</a>
+    </div>
 </body>
 </html>
