FILE: adobo.html done editing

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="recipes/pictures/icon-food.png">
 </head>
-<body>
+<body style="background-image: url(recipes/pictures/food.jpg);">
     <h1>Odin Recipes</h1>
     <div id="recipes">
         <a href="recipes/adobo.html">Adobo</a><br>
