FILE: angels-burger.html edited (inline css)

--- a/recipes/adobo.html
+++ b/recipes/adobo.html
@@ -8,9 +8,9 @@
     <link rel="icon" href="../recipes/pictures/icon-food.png">
 </head>
 
-<body style="border: 1px solid; border-radius: 10px; margin: 10px 100px; background-image: url(../recipes/pictures/food.jpg);">
+<body style="background-image: url(../recipes/pictures/food.jpg); margin: 10px 100px;">
 
-    <div style="background: lightyellow;">
+    <div style="background: lightyellow; position: absolute;">
 
         <h1 style="margin: 20px 20px; margin-bottom: 10px;">Adobo</h1>
 
