--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="recipes/pictures/icon-food.png">
 </head>
-<body style="background-image: url(recipes/pictures/food.jpg);">
+<body style="background-image: url(recipes/pictures/food2.jpg);">
     <h1>Odin Recipes</h1>
     <div id="recipes">
         <a href="recipes/adobo.html">Adobo</a><br>
