--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div id="recipes">
         <a href="recipes/adobo.html">Adobo</a><br>
         <a href="recipes/angels-burger.html">Angels Burger</a><br>
+        <!--
         <a href="recipes/breadpan.html">Bread Pan</a><br>
         <a href="recipes/halo-halo.html">Halo-halo</a><br>
-        <a href="recipes/presto-peanut.html">Presto Peanut</a>
+        <a href="recipes/presto-peanut.html">Presto Peanut</a> -->
     </div>
 </body>
 </html>
