--- a/recipes/breadpan.html
+++ b/recipes/breadpan.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body style="background: lightcoral;">
     <h1>Bread Pan</h1>
     <img src="pictures/Breadpan.jpg" alt="breadpan" height="310" weight="310">
     <p>Mamamayang Pilipino snacks</p>
