--- a/recipes/breadpan.html
+++ b/recipes/breadpan.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bread Pan | Odin Recipes</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="/recipes/pictures/icon-food.png">
 </head>
 <body style="background: url(/recipes/pictures/food4.jpg); margin: 10px 100px;">
     
@@ -15,7 +16,7 @@
 
         <img src="pictures/Breadpan.jpg" alt="breadpan" height="725" weight="725" style="padding: 8px; border: 1px solid; margin: 10px 200px;">
 
-        <div style="border: 1px solid; margin: 10px 20px 20px; background: lightyellow;">
+        <div style="border: 1px solid; margin: 10px 20px 20px; background: lightseagreen;">
             
             <p style="padding: 8px 15px">Mamamayang Pilipino snacks.</p>
 
