--- a/recipes/adobo.html
+++ b/recipes/adobo.html
@@ -10,13 +10,13 @@
 
 <body style="background-image: url(../recipes/pictures/food.jpg); margin: 10px 100px;">
 
-    <div style="background: lightyellow; position: absolute;">
+    <div style="background: lightpink; position: absolute;">
 
         <h1 style="margin: 20px 20px; margin-bottom: 10px;">Adobo</h1>
 
-            <img src="pictures/Adobo.jpg" alt="adobo" height="725" weight="725" style="padding: 8px; border: 1px solid; margin: 10px 20px">
+        <img src="pictures/Adobo.jpg" alt="adobo" height="725" weight="725" style="padding: 8px; border: 1px solid; margin: 10px 20px">
         
-        <div style="border: 1px solid; margin: 10px 20px 20px;">
+        <div style="border: 1px solid; margin: 10px 20px 20px; background: brown;">
 
             <p style="padding: 8px 15px;">Adobo is the pambansang ulam in the Philippines. Adobo is favorite food of Mamamayang Pilipino.</p>
 
